--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-libsrvf 
+libsrvf: a library for shape analysis using the square root velocity framework.
+
 
 0. Required third-party libraries
 ------------------------------------------------------------------------------
 First, in order to build or use any part of libsrvf, you need to have the 
 GNU Scientific Library installed.  See www.gnu.org/software/gsl/ for 
-instructions.
+instructions.  Really, we only need this for the SVD routine; this 
+dependency may be removed in the future.
 
 FLTK 1.1 and OpenGL 1.1 (or newer) are required for the plotting features.  
 See www.fltk.org for instructions on installing FLTK.
@@ -17,120 +19,81 @@ compatible 'make' program.  The configure script should check all of this
 for you.
 
 
-I. Quick start guides
+I. Quick start guide
 ------------------------------------------------------------------------------
-Here are a few quick recipes.
 
-a) To build the partial matching demo program, the following steps should work:
+To build the project with plotting enabled and then install it under 
+the directory /home/fred, do this:
 
-> ./configure --enable-plot --enable-pmatch
+> ./configure --prefix=/home/fred --enable-plot
 > make
-> cd demos/pmatch
-> ./configure
+> make install
+
+This will install the headers under /home/fred/include/srvf, the libraries 
+will be installed under /home/fred/lib, and the demo programs will be 
+installed in /home/fred/bin.  If you don't have FLTK and OpenGL, then omit 
+the --enable-plot:
+
+> ./configure --prefix=/home/fred
 > make
-> src/pmdemo -h
+> make install
 
-The last command will output a help message explaining the options for the 
-demo program.  Requires GSL, FLTK, and OpenGL.
+If you have doxygen installed and want to generate the documentation, then do
+
+> doxygen
+
+The generated documentation will be in the doc/ directory.
+
+If you want to run the unit tests, then do the following after you build 
+the library:
+
+> make check
+> cd tests
+> ./runtests
+
+In order to run the unit tests, you need to have Boost, FLTK, and OpenGL 
+installed, and you need to pass --enable-plot to the configure script so that 
+the plotting features of the library get built.
+
+To see the full list of supported configuration options, do
+
+> ./configure --help
 
 
-II. Project layout and organization
+II. Demo programs
 ------------------------------------------------------------------------------
 
-The libsrvf package is made up of a main package providing core functionality, 
-and several subpackages providing additional functionality.  Each package 
-resides in its own directory and will be built into a separate library.  
-While the main package is required for anything to work, the other packages 
-are optional and can be built independently of each other.
+The demos/ directory contains several small programs using various 
+features of the library.  These programs are built when the library 
+is built, provided that the features they require (i.e. plotting) have 
+been enabled.
 
-The main package provides everything in the top-level srvf namespace.  
-Each subpackage implements a nested namespace under the top-level srvf 
-namespace.
+1. shape_dist
+ - Description: computes the shape distance between two curves
+ - Directory: demos/shapedist
+ - Executable: srvf_shapedist
+ - Required optional features: none
 
-Here are brief descriptions of the packages.
+2. srvf_pmatch
+ - Description: finds Pareto-optimal partial matches between two curves
+ - Directory: demos/pmatch
+ - Executable: srvf_pmatch
+ - Required optional features: none
 
-1. The main package
-Directory: srvf
-Library:   libsrvf.a
-Namespace: srvf
-The main package provides the core classes and algorithms for the library.  
-
-2. Plotting
-Directory: plot/
-Library:   libsrvf-plot.a
-Namespace: srvf::plot
-Very basic plotting support.  Requires FLTK and OpenGL.
-
-3. Partial matching
-Directory: pmatch/
-Library:   libsrvf-pmatch.a
-Namespace: srvf::pmatch
-Implementation of partial matching in the SRVF framework.
+3. srvf_pmatch_gui
+ - Description: a GUI version of srvf_pmatch
+ - Directory: demos/pmatch-gui
+ - Executable: srvf_pmatch_gui
+ - Required optional features: --enable-plot
 
 
-III. Building the library
+III. Matlab / Octave functions
 ------------------------------------------------------------------------------
-libsrvf uses the GNU autotools build system, so the usual steps should work:
 
->  ./configure [your configure options here]
->  make
->  make install
-
-If you have FLTK and OpenGL installed, then you can enable plotting 
-support by passing --enable-plot to ./configure.  This will build 
-the library libsrvf-plot.a
-
-If you want the partial matching library (libsrvf-pmatch.a) to be built, pass 
---enable-pmatch to ./configure.
-
-To change the installation directory, use the --prefix option.  For example, 
-
->  ./configure --prefix=/home/username
-
-will cause the libraries to be installed in /home/username/lib and the 
-headers to be installed in /home/username/include.  To see all of the 
-available configuration options, do
-
->  ./configure --help
-
-
-IV. Building the demo programs
-------------------------------------------------------------------------------
-Once the libraries have been built, the demo programs in the demos/ directory 
-can be built.  Each demo program depends on one or more of the srvf 
-libraries.
-
-Here is the list of demo programs, along with the dependencies for each one.
-
-1. pmdemo
------------
-Directory:    demos/pmatch
-Description:  a simple GUI application that displays the Pareto-optimal partial 
-              partial matches between two curves
-Dependencies: libsrvf, libsrvf-plot, libsrvf-pmatch
-
-
-2. pmdemo-no-gui
------------------
-Directory     demos/pmatch-no-gui
-Description:  finds the Pareto-optimal partial matches between two curves 
-              and saves them to a file.  Does not require plotting.
-Dependencies: libsrvf, libsrvf-pmatch
-
-
-V. Unit tests
-------------------------------------------------------------------------------
-To build the unit tests for the library, run the following command from this 
-directory:
-
->  make check
-
-The test programs are in the tests/ subdirectory for each package.  For 
-example, the test program for the main package is in srvf/tests/.
-
-You can also build the unit tests for a single package only.  For example, 
-
->  cd pmatch
->  make check
-
+The matlab/ directory contains Matlab / Octave implementations of most of 
+the library features.  Some of the features are implemented as MEX files, 
+and need to be compiled and linked against libsrvf.  Currently, this must 
+be done as a separate step, after building the library.  To do this, first 
+edit the Makefile in the matlab/ directory, then run make in the matlab/ 
+directory.
 
